welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:8: error: ')' expected but integer literal found.
      if (die==die 2 & noDoubles==true & die1=6)
                   ^withoutDoubles:9: error: illegal start of simple expression
    } return 0
    ^withoutDoubles:9: error: ';' expected but 'return' found.
    } return 0
      ^